Client: Add open graph tags

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,35 @@
         <link rel="icon" type="image/svg+xml" href="/logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Book Finder</title>
+
+        <meta
+            name="description"
+            content="Search and discover books using the Google Books API. Built with React, TypeScript, and Node.js."
+        />
+
+        <meta
+            property="og:title"
+            content="Book Finder - Search & Discover Books"
+        />
+        <meta
+            property="og:description"
+            content="A full-stack application for discovering and managing books using the Google Books API."
+        />
+        <meta property="og:image" content="/og-image.png" />
+        <meta property="og:type" content="website" />
+        <!-- todo: Add deployed apps url here -->
+        <!-- <meta property="og:url" content="" /> -->
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="Book Finder - Search & Discover Books"
+        />
+        <meta
+            name="twitter:description"
+            content="A full-stack application for discovering and managing books using the Google Books API."
+        />
+        <meta name="twitter:image" content="/og-image.png" />
     </head>
     <body>
         <div id="root"></div>
